--- a/contact.html
+++ b/contact.html
@@ -240,7 +240,7 @@
           </div>
           <div class="mil-envelope-body mil-tac mil-br-lg">
             <h4 class="mil-fs-36 mil-mb-60">🔥 Wow! That's so lucky! 🥳</h4>
-            <form>
+            <form id="discount-form">
               <div class="row">
                 <div class="col-6 mil-mb-15">
                   <div class="mil-input-frame">
@@ -288,7 +288,7 @@
                   </p>
                   <button
                     class="mil-btn mil-bg-a-1 mil-icon-btn mil-br-xl mil-hover-bri-105 mil-hover-scale mil-ml-60 mil-sm-ml-30"
-                    type="submit"
+                    type="submit" id="submit-btn"
                   >
                     Get it now<i
                       class="far fa-arrow-right mil-bg-m-1 mil-a-1"
@@ -616,9 +616,7 @@
                     class="mil-card-icon mil-mb-30"
                   />
                   <h3 class="mil-fs-30 mil-mb-20 mil-lh-110">Write</h3>
-                  <p class="mil-fs-18 mil-mb-5">
-                    info@procleangreen.com.au
-                  </p>
+                  <p class="mil-fs-18 mil-mb-5">info@procleangreen.com.au</p>
                 </div>
                 <div class="col-lg-4 mil-tac mil-mb-60">
                   <img
@@ -852,87 +850,153 @@
         <!-- footer -->
         <footer>
           <div class="mil-footer-bg">
-              <video class="mil-footer-bg mil-scale-img" data-value-1="1" data-value-2="1.3" autoplay="autoplay" loop="loop" muted="" playsinline="" oncontextmenu="return false;" preload="auto">
-                  <source src="media/footer.mp4">
-              </video>
+            <video
+              class="mil-footer-bg mil-scale-img"
+              data-value-1="1"
+              data-value-2="1.3"
+              autoplay="autoplay"
+              loop="loop"
+              muted=""
+              playsinline=""
+              oncontextmenu="return false;"
+              preload="auto"
+            >
+              <source src="media/footer.mp4" />
+            </video>
           </div>
           <div class="mil-footer-content">
-              <div class="container">
-                  <div class="row mil-p-f-60">
-                      <div class="col-lg-7 col-md-6 col-sm-12 mil-mb-60">
-                          <div class="row">
-                              <div class="col-8 col-md-6">
-                                  <a href="#top" class="mil-logo mil-hover-bri-105 mil-mb-30 mil-up" style="width: 16rem">
-                                      <img src="images/proClean.png" alt="logo" class="mil-light">
-                                  </a>
-                              </div>
-                          </div>
-                      </div>
-                      <div class="col-lg-5 col-md-6 col-sm-12 mil-mb-60">
-                          <div class="row">
-                              <div class="col-6">
-                                  <ul>
-                                      <li class="mil-fs-24 mil-fw-600 mil-m-3 mil-hover-a-1 mil-mb-20 mil-up"><a href="index.html">Home</a></li>
-                                      <li class="mil-fs-24 mil-fw-600 mil-m-3 mil-hover-a-1 mil-mb-20 mil-up"><a href="services.html">Services</a></li>
-                                      <li class="mil-fs-24 mil-fw-600 mil-m-3 mil-hover-a-1 mil-mb-20 mil-up"><a href="contact.html">Contact</a></li>
-                                  </ul>
-                              </div>
-                              <div class="col-6">
-                                  <ul>
-                                      <li class="mil-up-text mil-hover-m-4 mil-mb-20 mil-up"><a href="service.html">Industrial Cleaning</a></li>
-                                      <li class="mil-up-text mil-hover-m-4 mil-mb-20 mil-up"><a href="service.html">Home</a></li>
-                                      <li class="mil-up-text mil-hover-m-4 mil-mb-20 mil-up"><a href="service.html">Office</a></li>
-                                      <li class="mil-up-text mil-hover-m-4 mil-mb-20 mil-up"><a href="service.html">Windows</a></li>
-                                      <li class="mil-up-text mil-hover-m-4 mil-mb-20 mil-up"><a href="service.html">Gutter Cleaning</a></li>
-                                  </ul>
-                              </div>
-                          </div>
-                      </div>
+            <div class="container">
+              <div class="row mil-p-f-60">
+                <div class="col-lg-7 col-md-6 col-sm-12 mil-mb-60">
+                  <div class="row">
+                    <div class="col-8 col-md-6">
+                      <a
+                        href="#top"
+                        class="mil-logo mil-hover-bri-105 mil-mb-30 mil-up"
+                        style="width: 16rem"
+                      >
+                        <img
+                          src="images/proClean.png"
+                          alt="logo"
+                          class="mil-light"
+                        />
+                      </a>
+                    </div>
                   </div>
-                  <div class="mil-dots mil-up"></div>
-                  <div class="row mil-p-f-60 mil-sm-column-r">
-                      <div class="col-lg-7 col-md-6 col-sm-12 mil-column mil-jcb mil-mb-60">
-                          <ul class="mil-aic mil-mb-30 mil-up">
-                              <li class="mil-mr-20 mil-fs-20 mil-m-3">
-                                  <a href="#." target="_blank" data-no-swup="" class="mil-hover-a-1">
-                                      <i class="fab fa-instagram"></i>
-                                  </a>
-                              </li>
-                              <li class="mil-mr-20 mil-fs-20 mil-m-3">
-                                  <a href="#." target="_blank" data-no-swup="" class="mil-hover-a-1">
-                                      <i class="fab fa-facebook-f"></i>
-                                  </a>
-                              </li>
-                          </ul>
-                          <ul class="mil-aic mil-up">
-                              <li class="mil-hover-m-4 mil-mr-20">
-                                  <a href="#">Cookie Policy</a>
-                              </li>
-                          </ul>
-                      </div>
-                      <div class="col-lg-5 col-md-6 col-sm-12 mil-mb-60">
-                          <div class="row mil-jcb">
-                              <div class="col-6 mil-up">
-                                  <h5 class="mil-fs-22 mil-fw-600 mil-m-3 mil-mb-20">50 Pasanda Rd,</h5>
-                                  <p class="mil-mb-20">Munno Para West, <br>SA 5115</p>
-                                  <p class="mil-up-text mil-a-1">+61 (405) 805-552</p>
-                              </div>
-                          </div>
-                      </div>
+                </div>
+                <div class="col-lg-5 col-md-6 col-sm-12 mil-mb-60">
+                  <div class="row">
+                    <div class="col-6">
+                      <ul>
+                        <li
+                          class="mil-fs-24 mil-fw-600 mil-m-3 mil-hover-a-1 mil-mb-20 mil-up"
+                        >
+                          <a href="index.html">Home</a>
+                        </li>
+                        <li
+                          class="mil-fs-24 mil-fw-600 mil-m-3 mil-hover-a-1 mil-mb-20 mil-up"
+                        >
+                          <a href="services.html">Services</a>
+                        </li>
+                        <li
+                          class="mil-fs-24 mil-fw-600 mil-m-3 mil-hover-a-1 mil-mb-20 mil-up"
+                        >
+                          <a href="contact.html">Contact</a>
+                        </li>
+                      </ul>
+                    </div>
+                    <div class="col-6">
+                      <ul>
+                        <li class="mil-up-text mil-hover-m-4 mil-mb-20 mil-up">
+                          <a href="service.html">Industrial Cleaning</a>
+                        </li>
+                        <li class="mil-up-text mil-hover-m-4 mil-mb-20 mil-up">
+                          <a href="service.html">Home</a>
+                        </li>
+                        <li class="mil-up-text mil-hover-m-4 mil-mb-20 mil-up">
+                          <a href="service.html">Office</a>
+                        </li>
+                        <li class="mil-up-text mil-hover-m-4 mil-mb-20 mil-up">
+                          <a href="service.html">Windows</a>
+                        </li>
+                        <li class="mil-up-text mil-hover-m-4 mil-mb-20 mil-up">
+                          <a href="service.html">Gutter Cleaning</a>
+                        </li>
+                      </ul>
+                    </div>
                   </div>
-                  <div class="mil-dots mil-up"></div>
-                  <div class="mil-footer-bottom mil-aic mil-jcb mil-up">
-                      <p>© Copyright 2025 - All Rights Reserved.</p>
-                      <p>Built by: <a href="zoetech.io" target="_blank" data-no-swup="" class="mil-text-link mil-a-1">Zoe Tech</a></p>
-                  </div>
+                </div>
               </div>
+              <div class="mil-dots mil-up"></div>
+              <div class="row mil-p-f-60 mil-sm-column-r">
+                <div
+                  class="col-lg-7 col-md-6 col-sm-12 mil-column mil-jcb mil-mb-60"
+                >
+                  <ul class="mil-aic mil-mb-30 mil-up">
+                    <li class="mil-mr-20 mil-fs-20 mil-m-3">
+                      <a
+                        href="#."
+                        target="_blank"
+                        data-no-swup=""
+                        class="mil-hover-a-1"
+                      >
+                        <i class="fab fa-instagram"></i>
+                      </a>
+                    </li>
+                    <li class="mil-mr-20 mil-fs-20 mil-m-3">
+                      <a
+                        href="#."
+                        target="_blank"
+                        data-no-swup=""
+                        class="mil-hover-a-1"
+                      >
+                        <i class="fab fa-facebook-f"></i>
+                      </a>
+                    </li>
+                  </ul>
+                  <ul class="mil-aic mil-up">
+                    <li class="mil-hover-m-4 mil-mr-20">
+                      <a href="#">Cookie Policy</a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="col-lg-5 col-md-6 col-sm-12 mil-mb-60">
+                  <div class="row mil-jcb">
+                    <div class="col-6 mil-up">
+                      <h5 class="mil-fs-22 mil-fw-600 mil-m-3 mil-mb-20">
+                        50 Pasanda Rd,
+                      </h5>
+                      <p class="mil-mb-20">Munno Para West, <br />SA 5115</p>
+                      <p class="mil-up-text mil-a-1">+61 (405) 805-552</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="mil-dots mil-up"></div>
+              <div class="mil-footer-bottom mil-aic mil-jcb mil-up">
+                <p>© Copyright 2025 - All Rights Reserved.</p>
+                <p>
+                  Built by:
+                  <a
+                    href="zoetech.io"
+                    target="_blank"
+                    data-no-swup=""
+                    class="mil-text-link mil-a-1"
+                    >Zoe Tech</a
+                  >
+                </p>
+              </div>
+            </div>
           </div>
-      </footer>
-      <!-- footer end -->
+        </footer>
+        <!-- footer end -->
       </div>
       <!-- dynamic content end -->
     </div>
     <!-- page wrapper end -->
+
+    <!-- Email Service -->
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 
     <!-- swup js -->
     <script src="js/swup.min.js"></script>
