--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
           </div>
           <div class="mil-envelope-body mil-tac mil-br-lg">
             <h4 class="mil-fs-36 mil-mb-60">🔥 Wow! That's so lucky! 🥳</h4>
-            <form>
+            <form id="discount-form">
               <div class="row">
                 <div class="col-6 mil-mb-15">
                   <div class="mil-input-frame">
@@ -295,7 +295,7 @@
                   </p>
                   <button
                     class="mil-btn mil-bg-a-1 mil-icon-btn mil-br-xl mil-hover-bri-105 mil-hover-scale mil-ml-60 mil-sm-ml-30"
-                    type="submit"
+                    type="submit" id="submit-btn"
                   >
                     Get it now<i
                       class="far fa-arrow-right mil-bg-m-1 mil-a-1"
@@ -2036,6 +2036,10 @@
       <!-- dynamic content end -->
     </div>
     <!-- page wrapper end -->
+
+    <!-- Email Service -->
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+
 
     <!-- swup js -->
     <script src="js/swup.min.js"></script>
